fixed bug with overflow

--- a/components/Preview/Preview.module.scss
+++ b/components/Preview/Preview.module.scss
@@ -39,6 +39,10 @@
         font-size: 1rem;
     }
 
+    p {
+        margin-bottom: 0.5rem;
+    }
+
     h1,
     h2,
     h3,
