--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -1,6 +1,5 @@
 @use '../styles/theming/colors.scss' as *;
 
-html,
 body {
     background-color: $bg-dark-3;
     overflow-x: hidden;
